infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vbar-viber-bot
  labels:
    name: vbar-viber-bot
    app: vbar-viber-bot
